Fix to compile also with Java 11.